# strategy_platform_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.kiro/settings/rules/: ears-format.md
.kiro/specs/comprehensive-testing/: requirements.md  spec.json
.kiro/specs/email-auth/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/freqtrade-integration/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/project-scaffolding/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/quality-test-suite/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/quant-platform-backend/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/real-time-signals/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/strategy-pair-metrics/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: api-standards.md  authentication.md  database.md  freqtrade-integration.md  product.md  structure.md  tech.md
config/: __init__.py  settings.py
docs/: frontend-api-guide.md  report-api-guide.md
migrations/: env.py
migrations/versions/: 001_create_users.py  002_create_strategies.py  003_create_backtest_tables.py  004_create_trading_signals.py  005_create_research_reports.py  006_add_strategy_pair_metrics.py  007_add_trading_signals_constraints.py  008_partial_unique_trading_signals_realtime.py  058bf947c029_add_strategy_metrics_columns.py  156bfa76279c_freqtrade_integration_add_user_is_admin_.py  55d489f35f93_replace_username_with_email_in_users.py  756376e45908_add_strategies_annual_return_column.py  8157cb01dbf5_add_idx_signal_pair_strategy_at.py  d018430aa6f1_add_strategies_total_return_column.py
src/: main.py
src/admin/: __init__.py  auth.py  views.py
src/api/: admin_backtests.py  admin_reports.py  admin_signals.py  app.py  auth.py  backtests.py  health.py  main_router.py  pair_metrics.py  reports.py  signals.py  signals_top.py  strategies.py  trial.py
src/core/: __init__.py  app_settings.py  deps.py  enums.py  exception_handlers.py  exceptions.py  response.py  security.py
src/freqtrade_bridge/: __init__.py  backtester.py  config_template.json  data_downloader.py  exceptions.py  runner.py  signal_calculator.py  signal_fetcher.py  strategy_registry.py
src/freqtrade_bridge/seeds/: __init__.py  seed_all.py  seed_reports.py  seed_signals.py  seed_strategies.py
src/models/: __init__.py  backtest.py  base.py  report.py  signal.py  strategy.py  strategy_pair_metrics.py  user.py
src/schemas/: __init__.py  auth.py  pair_metrics.py  strategy.py
src/services/: admin_backtest_service.py  auth_service.py  backtest_service.py  metrics_validator.py  pair_metrics_service.py  report_service.py  signal_service.py  strategy_service.py  trial_service.py
src/utils/: __init__.py  email_validator.py  logging.py
src/workers/: __init__.py  celery_app.py  db.py  redis_client.py
tests/: conftest.py
tests/fixtures/: strategy_fixtures.py
tests/integration/: conftest.py  test_admin_backtest_api.py  test_admin_report_api.py  test_admin_signals_api.py  test_api_real_db.py  test_auth_api.py  test_backtest_api.py  test_backtest_status_flow.py  test_data_downloader_integration.py  test_end_to_end.py  test_freqtrade_isolation.py  test_health.py  test_input_validation.py  test_pair_metrics_api.py  test_real_db_fixtures.py  test_real_db_persistence.py  test_report_api.py  test_signal_api.py  test_signal_calculation_integration.py  test_signal_generation.py  test_signals_top_api.py  test_strategy_api.py
tests/unit/: test_admin.py  test_admin_backtest_service.py  test_app_factory.py  test_auth_schemas.py  test_auth_service.py  test_backtest_service.py  test_backtest_task_metrics.py  test_backtest_worker_metrics_chain.py  test_backtester_parse_result.py  test_backtester_trades_to_signals.py  test_celery_tasks.py  test_config.py  test_coord_task.py  test_data_downloader.py  test_deps.py  test_email_validator.py  test_enums.py  test_freqtrade_bridge.py  test_lifespan.py  test_live_metrics.py  test_live_worker_metrics_chain.py  test_logging_module.py  test_main.py  test_main_fastapi.py  test_metrics_validator.py  test_migration_007.py  test_migrations.py  test_models.py  test_new_exceptions.py  test_pair_metrics_admin.py  test_pair_metrics_schema.py  test_permission_schemas.py  test_real_time_signals_config.py  test_report_service.py  test_require_admin.py  test_response.py  test_security.py  test_security_isolation.py  test_seed_signals_extract.py  test_shared_conftest.py  (+9 more)
(+16 files in other folders)
